--- a/public/view/index_admin/webboard-list.html
+++ b/public/view/index_admin/webboard-list.html
@@ -1,5 +1,7 @@
 <div>
   <h3>{{title}}</h3>
+  <a ui-sref="create">Create</a>
+  <br/>
   <button ng-click="listTopic()">Load topic</button>
   <table>
     <tr ng-repeat="t in topic">
